{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 1357,
  "lineage": "27397d41-e396-aa77-bde1-8bde3b678065",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e9927e52f8a24c8",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:elastic-ip/eipalloc-05e9927e52f8a24c8",
            "association_id": "eipassoc-09ab85c7c2e396b61",
            "domain": "vpc",
            "id": "eipalloc-05e9927e52f8a24c8",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-03b9ee8d59fdec8b8",
            "private_dns": "ip-10-0-1-37.eu-north-1.compute.internal",
            "private_ip": "10.0.1.37",
            "public_dns": "ec2-51-21-44-95.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.44.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Public NAT EIP"
            },
            "tags_all": {
              "Name": "Public NAT EIP",
              "Owner": "ymontagnier"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-08241993df8ec12e9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08241993df8ec12e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ymontagnier-tp07-ex01-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0850edac037987cea",
            "private_dns": "ip-10-0-1-58.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-51-20-140-48.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.140.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ymontagnier-tp07-ex01",
                  "Owner": "ymontagnier"
                },
                "tags_all": {
                  "Name": "ymontagnier-tp07-ex01",
                  "Owner": "ymontagnier"
                },
                "throughput": 125,
                "volume_id": "vol-0e22688907bb6de2b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b99b881a84e16049",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-bastion"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-bastion",
              "Owner": "ymontagnier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff7beb37aac31a83"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a9858973b288bdd",
            "arn": "arn:aws:ec2:eu-north-1:134400125759:instance/i-02d4b5215b5d0759b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d4b5215b5d0759b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ymontagnier-tp07-ex01-nextcloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0783f983ff4d21766",
            "private_dns": "ip-10-0-4-107.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "ymontagnier-tp07-ex01",
                  "Owner": "ymontagnier"
                },
                "tags_all": {
                  "Name": "ymontagnier-tp07-ex01",
                  "Owner": "ymontagnier"
                },
                "throughput": 125,
                "volume_id": "vol-0b0e71a9b3f222dfa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011f7faa248e48dfa",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-nextcloud"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-nextcloud",
              "Owner": "ymontagnier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fc71b930d0a065d8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.nextcloud_db",
            "aws_db_subnet_group.nextcloud_rds_subnet",
            "aws_efs_file_system.nextcloud_efs",
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_key_pair.nextcloud",
            "aws_lb.nextcloud",
            "aws_nat_gateway.public_nat",
            "aws_route53_record.nextcloud",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb",
            "aws_security_group.nextcloud_db_sg",
            "aws_security_group.nextcloud_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_route53_zone.training",
            "random_password.rds_nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:internet-gateway/igw-0d5ff765ba0f851d1",
            "id": "igw-0d5ff765ba0f851d1",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-InternetGateway"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-InternetGateway",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/nextcloud-alb/73369dd676d2237d",
            "arn_suffix": "app/nextcloud-alb/73369dd676d2237d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nextcloud-alb-938499883.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/nextcloud-alb/73369dd676d2237d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nextcloud-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0436a3298428d1d54"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b99b881a84e16049"
              },
              {
                "subnet_id": "subnet-0c41d4e1236368afb"
              },
              {
                "subnet_id": "subnet-0ef84a8113cd9a06f"
              }
            ],
            "subnets": [
              "subnet-0b99b881a84e16049",
              "subnet-0c41d4e1236368afb",
              "subnet-0ef84a8113cd9a06f"
            ],
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0fa84a516ad7ba47e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/nextcloud-alb/73369dd676d2237d/2c85d820b19b296b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:listener/app/nextcloud-alb/73369dd676d2237d/2c85d820b19b296b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:loadbalancer/app/nextcloud-alb/73369dd676d2237d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01",
              "Owner": "ymontagnier"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nextcloud",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/nextcloud-tg/e2f513dc1f3b1069",
            "arn_suffix": "targetgroup/nextcloud-tg/e2f513dc1f3b1069",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/nextcloud-tg/e2f513dc1f3b1069",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nextcloud-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01",
              "Owner": "ymontagnier"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/nextcloud-tg/e2f513dc1f3b1069-20250225121247338100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:134400125759:targetgroup/nextcloud-tg/e2f513dc1f3b1069",
            "target_id": "i-02d4b5215b5d0759b"
          },
          "dependencies": [
            "aws_db_instance.nextcloud_db",
            "aws_db_subnet_group.nextcloud_rds_subnet",
            "aws_efs_file_system.nextcloud_efs",
            "aws_eip.nat_eip",
            "aws_instance.nextcloud",
            "aws_internet_gateway.igw",
            "aws_key_pair.nextcloud",
            "aws_lb.nextcloud",
            "aws_lb_target_group.nextcloud",
            "aws_nat_gateway.public_nat",
            "aws_route53_record.nextcloud",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb",
            "aws_security_group.nextcloud_db_sg",
            "aws_security_group.nextcloud_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_route53_zone.training",
            "random_password.rds_nextcloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e9927e52f8a24c8",
            "association_id": "eipassoc-09ab85c7c2e396b61",
            "connectivity_type": "public",
            "id": "nat-0c0ebb3a88255d53d",
            "network_interface_id": "eni-03b9ee8d59fdec8b8",
            "private_ip": "10.0.1.37",
            "public_ip": "51.21.44.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b99b881a84e16049",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-NATGateway"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-NATGateway",
              "Owner": "ymontagnier"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:network-acl/acl-079d22ababc2b8995",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-079d22ababc2b8995",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "13.48.4.200/30",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "134400125759",
            "subnet_ids": [
              "subnet-002e828b9501b22d2",
              "subnet-011f7faa248e48dfa",
              "subnet-01b7ccbf369b87e85",
              "subnet-0b99b881a84e16049",
              "subnet-0c41d4e1236368afb",
              "subnet-0ef84a8113cd9a06f"
            ],
            "tags": {
              "Name": "ymontagnier-tp07-ex01-acl"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-acl",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0fc30d45f25b45d79",
            "network_acl_id": "acl-079d22ababc2b8995",
            "subnet_id": "subnet-011f7faa248e48dfa"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0562edb37cf2ac6e1",
            "network_acl_id": "acl-079d22ababc2b8995",
            "subnet_id": "subnet-002e828b9501b22d2"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d08bb2ed7e881dfa",
            "network_acl_id": "acl-079d22ababc2b8995",
            "subnet_id": "subnet-01b7ccbf369b87e85"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_acl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-00514b592097d407e",
            "network_acl_id": "acl-079d22ababc2b8995",
            "subnet_id": "subnet-0b99b881a84e16049"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-03ec59eef8dd640ab",
            "network_acl_id": "acl-079d22ababc2b8995",
            "subnet_id": "subnet-0c41d4e1236368afb"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-08e05257eb2ea11d0",
            "network_acl_id": "acl-079d22ababc2b8995",
            "subnet_id": "subnet-0ef84a8113cd9a06f"
          },
          "dependencies": [
            "aws_network_acl.acl",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0ae1cf24ce2af4edc",
            "id": "rtb-0ae1cf24ce2af4edc",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c0ebb3a88255d53d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp07-ex01-private-rtb-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-private-rtb-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-092049860f8d8b22a",
            "id": "rtb-092049860f8d8b22a",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c0ebb3a88255d53d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp07-ex01-private-rtb-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-private-rtb-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0e04a7f10e8da70c7",
            "id": "rtb-0e04a7f10e8da70c7",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c0ebb3a88255d53d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp07-ex01-private-rtb-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-private-rtb-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:route-table/rtb-0ab16bcfad8df96fa",
            "id": "rtb-0ab16bcfad8df96fa",
            "owner_id": "134400125759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5ff765ba0f851d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ymontagnier-tp07-ex01-public-rtb"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-public-rtb",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078269c74d3312d3e",
            "route_table_id": "rtb-0ae1cf24ce2af4edc",
            "subnet_id": "subnet-011f7faa248e48dfa"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad147c24fbfc67e",
            "route_table_id": "rtb-092049860f8d8b22a",
            "subnet_id": "subnet-002e828b9501b22d2"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011b3e4edbbe5d565",
            "route_table_id": "rtb-0e04a7f10e8da70c7",
            "subnet_id": "subnet-01b7ccbf369b87e85"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.public_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4dd10e01d0280cb",
            "route_table_id": "rtb-0ab16bcfad8df96fa",
            "subnet_id": "subnet-0b99b881a84e16049"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0984c457cba8a3bcb",
            "route_table_id": "rtb-0ab16bcfad8df96fa",
            "subnet_id": "subnet-0c41d4e1236368afb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0571f4b4d9424e31d",
            "route_table_id": "rtb-0ab16bcfad8df96fa",
            "subnet_id": "subnet-0ef84a8113cd9a06f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0436a3298428d1d54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0436a3298428d1d54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nextcloud-alb-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0ff7beb37aac31a83",
            "description": "Allow SSH inbound traffic from ynov and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff7beb37aac31a83",
            "ingress": [
              {
                "cidr_blocks": [
                  "13.38.15.170/32",
                  "176.138.11.81/32",
                  "13.38.79.125/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ymontagnier-tp07-ex01-bastion-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp07-ex01-bastion-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-bastion-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0a2b9d63511916365",
            "description": "Security group for Nextcloud EFS",
            "egress": [],
            "id": "sg-0a2b9d63511916365",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc71b930d0a065d8"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "ymontagnier-tp07-ex01-efs-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp07-ex01-nextcloud-efs-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-nextcloud-efs-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-058933e43503cbcbd",
            "description": "RDS Nextcloud",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058933e43503cbcbd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc71b930d0a065d8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ymontagnier-tp07-ex01-nextcloud-db-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextcloud_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group/sg-0fc71b930d0a065d8",
            "description": "Allow SSH inbound traffic from bastion and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc71b930d0a065d8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ff7beb37aac31a83"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0436a3298428d1d54"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0436a3298428d1d54"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ymontagnier-tp07-ex01-nextcloud-sg",
            "name_prefix": "",
            "owner_id": "134400125759",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ymontagnier-tp07-ex01-nextcloud-sg"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-nextcloud-sg",
              "Owner": "ymontagnier"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-011f7faa248e48dfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011f7faa248e48dfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-private-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-private-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-002e828b9501b22d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002e828b9501b22d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-private-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-private-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-01b7ccbf369b87e85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b7ccbf369b87e85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-private-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-private-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0b99b881a84e16049",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b99b881a84e16049",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-public-eu-north-1a"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-public-eu-north-1a",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0c41d4e1236368afb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c41d4e1236368afb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-public-eu-north-1b"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-public-eu-north-1b",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:subnet/subnet-0ef84a8113cd9a06f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef84a8113cd9a06f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "134400125759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-public-eu-north-1c"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-public-eu-north-1c",
              "Owner": "ymontagnier"
            },
            "vpc_id": "vpc-0fa84a516ad7ba47e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:vpc/vpc-0fa84a516ad7ba47e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00fd1a8033d018fdc",
            "default_route_table_id": "rtb-018640616d75b0233",
            "default_security_group_id": "sg-06b622d6304c60103",
            "dhcp_options_id": "dopt-84fa2ded",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa84a516ad7ba47e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018640616d75b0233",
            "owner_id": "134400125759",
            "tags": {
              "Name": "ymontagnier-tp07-ex01-vpc"
            },
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01-vpc",
              "Owner": "ymontagnier"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-04a633202ab455a9a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04a633202ab455a9a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ff7beb37aac31a83",
            "security_group_rule_id": "sgr-04a633202ab455a9a",
            "tags": null,
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-048009b086300e62c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-048009b086300e62c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fc71b930d0a065d8",
            "security_group_rule_id": "sgr-048009b086300e62c",
            "tags": null,
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01",
              "Owner": "ymontagnier"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_alb_to_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-01b9a22c583d3850a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-01b9a22c583d3850a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0436a3298428d1d54",
            "security_group_id": "sg-0fc71b930d0a065d8",
            "security_group_rule_id": "sgr-01b9a22c583d3850a",
            "tags": null,
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01",
              "Owner": "ymontagnier"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_from_alb_to_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-028f6f30246b202fa",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-028f6f30246b202fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0436a3298428d1d54",
            "security_group_id": "sg-0fc71b930d0a065d8",
            "security_group_rule_id": "sgr-028f6f30246b202fa",
            "tags": null,
            "tags_all": {
              "Name": "ymontagnier-tp07-ex01",
              "Owner": "ymontagnier"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_nfs_from_nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0c522900d1577a604",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2049,
            "id": "sgr-0c522900d1577a604",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0fc71b930d0a065d8",
            "security_group_id": "sg-0a2b9d63511916365",
            "security_group_rule_id": "sgr-0c522900d1577a604",
            "tags": {
              "Name": "Allow NFS/EFS access from Nextcloud SG"
            },
            "tags_all": {
              "Name": "Allow NFS/EFS access from Nextcloud SG",
              "Owner": "ymontagnier"
            },
            "to_port": 2049
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-049fa44fa9a2c615a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-049fa44fa9a2c615a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0ff7beb37aac31a83",
            "security_group_id": "sg-0fc71b930d0a065d8",
            "security_group_rule_id": "sgr-049fa44fa9a2c615a",
            "tags": {
              "Name": "Allow SSH from Bastion"
            },
            "tags_all": {
              "Name": "Allow SSH from Bastion",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nextcloud_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_cloud9_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-00149d0695a58e26c",
            "cidr_ipv4": "13.38.79.125/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00149d0695a58e26c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ff7beb37aac31a83",
            "security_group_rule_id": "sgr-00149d0695a58e26c",
            "tags": {
              "Name": "Allow SSH from Cloud9"
            },
            "tags_all": {
              "Name": "Allow SSH from Cloud9",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_maison_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0963988da400980fa",
            "cidr_ipv4": "176.138.11.81/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0963988da400980fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ff7beb37aac31a83",
            "security_group_rule_id": "sgr-0963988da400980fa",
            "tags": {
              "Name": "Allow SSH depuis ma maison"
            },
            "tags_all": {
              "Name": "Allow SSH depuis ma maison",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_ynov_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:134400125759:security-group-rule/sgr-0bd4731e425964b6c",
            "cidr_ipv4": "13.38.15.170/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0bd4731e425964b6c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ff7beb37aac31a83",
            "security_group_rule_id": "sgr-0bd4731e425964b6c",
            "tags": {
              "Name": "Allow SSH from YNOV"
            },
            "tags_all": {
              "Name": "Allow SSH from YNOV",
              "Owner": "ymontagnier"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}